<resources>
    <!-- Application -->
    <string name="titleApplication">SCORE !</string>
    <!-- Connection -->
    <string name="titleConnection">Connection</string>
    <string name="hintLogin">Login</string>
    <string name="hintPassword">Password</string>
    <string name="btnSignIn">Sign in</string>
    <string name="btnSignUp">Sign up</string>
    <!-- Controller_Register -->
    <string name="titleRegister">Register</string>
    <string name="hintConfirmPassword">Confirm Password</string>
    <string name="btnRegister">Register</string>
    <!-- Menu -->
    <string name="titleMenu">Menu</string>
    <string name="btnScore">Score</string>
    <string name="btnTop10">Top 10</string>
    <string name="btnGames">Games</string>
    <string name="btnUsers">Users</string>
    <string name="btnSignOut">Sign out</string>
    <!-- Score -->
    <string name="titleScore">Score</string>
    <string name="hintGame">Game</string>
    <string name="btnGame">...</string>
    <string name="listGame">Games</string>
    <string name="hintScore">Score</string>
    <string name="btnSaveScore">Save</string>
    <!-- Top 10 -->
    <string name="titleTop10">Top 10</string>
    <string name="btnTop10Display">Display</string>
    <!-- Games -->
    <string name="titleGames">Games</string>
    <string name="game">Game</string>
    <!-- Users -->
    <string name="titleUsers">Users</string>

    <!-- Connection Messages -->
    <string name="C100">Login is missing !</string>
    <string name="C110">Password is missing !</string>
    <string name="C200">Wrong Login/Password !</string>

    <!-- Register Messages -->
    <string name="R0">Account has been created !</string>
    <string name="R100">Login is missing !</string>
    <string name="R110">Password is missing !</string>
    <string name="R120">Passwords do not match !</string>
    <string name="R200">Login is already used !</string>

    <!-- GameList Messages -->
    <string name="Gl500">No games found !</string>

    <!-- ScoreSave Messages -->
    <string name="SS0">Score has been saved !</string>
    <string name="SS90">Invalid number !</string>
    <string name="SS100">Score is missing !</string>
    <string name="SS110">Game is missing !</string>
    <string name="SS120">ID is missing !</string>

    <!-- Top50 Messages -->
    <string name="T100">Game is missing !</string>
    <string name="T500">Score not found !</string>

    <!-- GameList Messages -->
    <string name="U500">No games found !</string>

    <!-- DB Messages -->
    <string name="DB1000">Server problem !</string>
    <string name="DB2000">Error !</string>
</resources>