<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context="be.condorcet.stablum.innovationstechnologiques.Menu">

    <Button
        android:text="@string/btnScore"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/shape"
        android:id="@+id/btnScore" />

    <Button
        android:text="@string/btnTop10"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:background="@drawable/shape"
        android:id="@+id/btnTop10" />

    <Button
        android:text="@string/btnGames"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:background="@drawable/shape"
        android:id="@+id/btnGames" />

    <Button
        android:text="@string/btnUsers"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        android:background="@drawable/shape"
        android:id="@+id/btnUsers" />

    <Button
        android:text="@string/btnSignOut"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="330dp"
        android:background="@drawable/shape"
        android:id="@+id/btnSignOut" />
</RelativeLayout>