<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context="be.condorcet.stablum.innovationstechnologiques.Controller_Connection">

    <EditText
        android:inputType="textPersonName"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:hint="@string/hintLogin"
        android:layout_marginTop="50dp"
        android:background="@drawable/shape"
        android:id="@+id/editPseudo" />

    <EditText
        android:inputType="textPassword"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:hint="@string/hintPassword"
        android:layout_marginTop="100dp"
        android:background="@drawable/shape"
        android:id="@+id/editPassword" />

    <Button
        android:background="@drawable/shape"
        android:id="@+id/btnSignIn"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="160dp"
        android:layout_width="fill_parent"
        android:onClick="onClick"
        android:text="@string/btnSignIn"
        />

    <Button
        android:background="@drawable/shape"
        android:id="@+id/btnSignUp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="250dp"
        android:layout_width="fill_parent"
        android:onClick="onClick"
        android:text="@string/btnSignUp" />

</RelativeLayout>