<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:id="@+id/bla"
    tools:context="be.condorcet.stablum.innovationstechnologiques.Controller_Top10"
    >

    <EditText
        android:inputType="textPersonName"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="50dp"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:hint="@string/hintGame"
        android:layout_marginTop="50dp"
        android:background="@drawable/shape"
        android:id="@+id/editGame" />

    <Button
        android:background="@drawable/shape"
        android:layout_height="40dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="50dp"
        android:layout_width="50dp"
        android:onClick="onClick"
        android:text="@string/btnGame"
        android:id="@+id/btnGame" />

    <Button
        android:background="@drawable/shape"
        android:id="@+id/btnTop10Display"
        android:layout_height="40dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="100dp"
        android:layout_width="fill_parent"
        android:onClick="onClick"
        android:text="@string/btnTop10Display" />
</RelativeLayout>